feat(ai): Harden agricultural trust, confidence calibration, and AI follow-ups